feat: add bassic setup code
